--- a/src/homepage.html
+++ b/src/homepage.html
@@ -1,55 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My custom Bulma website</title>
-  </head>
-  <body>
-    <section class="hero is-primary is-large" style="background-image: url('https://images.unsplash.com/photo-1477554193778-9562c28588c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80');">
-        <!-- Hero head: will stick at the top -->
-        <div class="hero-head">
-          <nav class="navbar">
-            <div class="container">
-              <div class="navbar-brand">
-                <a class="navbar-item">
-                  <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">
-                </a>
-              </div>
-              <div id="navbarMenuHeroA" class="navbar-menu">
-                <div class="navbar-end">
-                  <a class="navbar-item">
-                    Home
-                  </a>
-                  <a class="navbar-item">
-                    Examples
-                  </a>
-                  <a class="navbar-item">
-                    Documentation
-                  </a>
-                  <span class="navbar-item">
-                    <a class="button is-primary is-inverted">
-                      <span>Download</span>
-                    </a>
-                  </span>
-                </div>
-              </div>
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>My custom Bulma website</title>
+</head>
+
+<body>
+	<section class="hero is-primary is-fullheight is-bold is-fullheight-with-navbar"
+		style="background: url('https://images.unsplash.com/photo-1477554193778-9562c28588c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80') no-repeat right top; border: 15px solid white;">
+		<!-- Hero head: will stick at the top -->
+		<div class="hero-head">
+			<!-- Main container -->
+			<nav class="level container is-fluid" style="margin-top: 30px;">
+				<!-- Left side -->
+				<div class="level-left">
+					<div class="level-item">
+						<p class="subtitle is-5">
+							<strong class="has-text-dark">123 Posts</strong>
+						</p>
+					</div>
+				</div>
+
+				<!-- Right side -->
+				<div class="level-right">
+					<p class="level-item"><a class="has-text-dark has-text-weight-medium" href="#">About</a></p>
+					<p class="level-item"><a class="has-text-dark has-text-weight-medium" href="#">Articles</a></p>
+					<p class="level-item"><button class="button is-primary is-outlined is-radiusless"
+							style="border-width: 2px;">Outlined</button></p>
+				</div>
+			</nav>
+		</div>
+
+		<div class="hero-body">
+			<div class="container has-text-centered">
+				<h1 class="title is-1 is-uppercase" style="font-size: 6em;">
+					lombok
+				</h1>
+				<h2 class="subtitle is-3">
+					Hero subtitle
+					<div class="is-flex" style="justify-content: center; margin-top: .5em;">
+						<div style="border-bottom: 4px solid #858585; width: 1em;"></div>
+					</div>
+				</h2>
+			</div>
+		</div>
+	</section>
+	<section class="section" style="padding-top: 8em; padding-bottom: 15em; background-color: #e6e6e6;">
+		<div class="container">
+            <h1 class="title has-text-centered">Section</h1>
+            <div class="is-flex" style="justify-content: center; margin-top: .5em; margin-bottom: 4em;">
+                <div style="border-bottom: 4px solid #858585; width: 4em;"></div>
             </div>
-          </nav>
+			<div class="columns">
+				<div class="column">
+					<div class="card">
+						<div class="card-image">
+							<figure class="image is-4by3">
+								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+							</figure>
+						</div>
+						<div class="card-content">
+							<div class="media">
+								<div class="media-content">
+									<div class="is-flex" style="justify-content: center; margin-top: 2.5em; margin-bottom: 1em;">
+										<div style="border-bottom: 3px solid #858585; width: 2.5em;"></div>
+									</div>
+									<p class="title is-size-5 has-text-weight-light has-text-centered">Lorem ipsum
+										dolor sit amet consectetur adipisicing elit.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="column">
+					<div class="card">
+						<div class="card-image">
+							<figure class="image is-4by3">
+								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+							</figure>
+						</div>
+						<div class="card-content">
+							<div class="media">
+								<div class="media-content">
+									<div class="is-flex" style="justify-content: center; margin-top: 2.5em; margin-bottom: 1em;">
+										<div style="border-bottom: 3px solid #858585; width: 2.5em;"></div>
+									</div>
+									<p class="title is-size-5 has-text-weight-light has-text-centered">Lorem ipsum
+										dolor sit amet consectetur adipisicing elit.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="column">
+					<div class="card">
+						<div class="card-image">
+							<figure class="image is-4by3">
+								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+							</figure>
+						</div>
+						<div class="card-content">
+							<div class="media">
+								<div class="media-content">
+									<div class="is-flex" style="justify-content: center; margin-top: 2.5em; margin-bottom: 1em;">
+										<div style="border-bottom: 3px solid #858585; width: 2.5em;"></div>
+									</div>
+									<p class="title is-size-5 has-text-weight-light has-text-centered">Lorem ipsum
+										dolor sit amet consectetur adipisicing elit.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+    </section>
+    <div class="columns">
+        <div class="column">
+            <figure class="image is-128x128">
+                <img src="https://bulma.io/images/placeholders/256x256.png">
+            </figure>
         </div>
-      
-        <!-- Hero content: will be in the middle -->
-        <div class="hero-body">
-          <div class="container has-text-centered">
-            <h1 class="title">
-              Title
-            </h1>
-            <h2 class="subtitle">
-              Subtitle
-            </h2>
-          </div>
+        <div class="column">
+            <div class="container">
+                <h1 class="title">About</h1>
+                <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi voluptatem sunt eum provident omnis exercitationem corrupti atque esse maxime mollitia aut harum fugiat debitis libero dolorem, ab ut voluptas est.</p>
+            </div>
         </div>
-      </section>
-  </body>
+    </div>
+</body>
+
 </html>
