--- a/src/homepage.html
+++ b/src/homepage.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<section class="hero is-primary is-fullheight is-bold is-fullheight-with-navbar"
+	<section class="hero is-primary is-fullheight"
 		style="background: url('https://images.unsplash.com/photo-1477554193778-9562c28588c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80') no-repeat right top; border: 15px solid white;">
 		<!-- Hero head: will stick at the top -->
 		<div class="hero-head">
@@ -118,19 +118,44 @@
 			</div>
 		</div>
     </section>
-    <div class="columns">
-        <div class="column">
-            <figure class="image is-128x128">
-                <img src="https://bulma.io/images/placeholders/256x256.png">
-            </figure>
-        </div>
-        <div class="column">
-            <div class="container">
-                <h1 class="title">About</h1>
-                <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi voluptatem sunt eum provident omnis exercitationem corrupti atque esse maxime mollitia aut harum fugiat debitis libero dolorem, ab ut voluptas est.</p>
+    <section>
+        <div class="container is-fullhd">
+            <div class="columns is-gapless">
+                <div class="column">
+                    <figure class="image">
+                        <img src="https://images.unsplash.com/photo-1560747571-bcf9a177ac53?ixlib=rb-1.2.1&auto=format&fit=crop&w=625&q=80">
+                    </figure>
+                </div>
+                <div class="column container is-fullhd">
+                    <div class="has-text-centered">
+                        <div style="margin: 5em 3em;">
+                            <h1 class="title">About</h1>
+                            <div class="is-flex" style="justify-content: center; margin-top: .5em; margin-bottom: 2em;">
+                                <div style="border-bottom: 4px solid #858585; width: 4em;"></div>
+                            </div>
+                            <p class="subtitle is-6 has-text-left" style="line-height: 1.8; letter-spacing: 1px;">
+                                A simple container to divide your page into sections, like the one you're currently reading
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi dolores rerum eum doloremque a ipsa perferendis voluptatibus veniam et, eos similique cum esse accusantium sit laborum rem voluptas odit in.
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptas, dignissimos sint veritatis iusto quam non est dolores dolor quo harum. Voluptate sapiente atque adipisci at veniam doloremque iure! Blanditiis!
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+    <section class="section">
+        <div class="container has-text-centered">
+            <div class="">
+                <h1 class="title">Subscripe</h1>
+                <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit porro accusantium nam harum omnis cupiditate</h2>
+            </div>
+            <div class="control">
+                <input class="input" type="text" placeholder="Text input">
+                <button class="button">Subscripe</button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
