--- a/src/homepage.html
+++ b/src/homepage.html
@@ -10,7 +10,7 @@
 
 <body>
 	<section class="hero is-primary is-fullheight"
-		style="background: url('https://images.unsplash.com/photo-1477554193778-9562c28588c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80') no-repeat right top; border: 15px solid white;">
+		style="background: url('https://images.unsplash.com/photo-1477554193778-9562c28588c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80') no-repeat right top;">
 		<!-- Hero head: will stick at the top -->
 		<div class="hero-head">
 			<!-- Main container -->
@@ -18,8 +18,8 @@
 				<!-- Left side -->
 				<div class="level-left">
 					<div class="level-item">
-						<p class="subtitle is-5">
-							<strong class="has-text-dark">123 Posts</strong>
+						<p class="title is-2">
+							<strong class="has-text-dark is-uppercase">GL</strong>
 						</p>
 					</div>
 				</div>
@@ -144,18 +144,28 @@
             </div>
         </div>
     </section>
-    <section class="section">
-        <div class="container has-text-centered">
-            <div class="">
-                <h1 class="title">Subscripe</h1>
-                <h2 class="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit porro accusantium nam harum omnis cupiditate</h2>
-            </div>
-            <div class="control">
-                <input class="input" type="text" placeholder="Text input">
-                <button class="button">Subscripe</button>
-            </div>
+    <section class="hero is-medium has-background-grey-lighter is-bold">
+        <div class="hero-body">
+          <div class="container has-text-centered" style="display: flex; flex-direction: column;">
+            <h1 class="title has-text-weight-normal">Subscribe</h1>
+            <h2 class="subtitle is-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+            <input class="input is-radiusless has-background-grey-light" type="text" placeholder="Email" style="box-shadow: none; border: none; margin-bottom: 1em; width: 35em; align-self: center;">
+            <button class="button is-dark is-outlined is-radiusless" style="align-self: center; border-width: 2px;">Subscribe</button>
+          </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="content">
+            <div class="is-pulled-left">
+
+            </div>
+            <div class="is-pulled-right">
+                <a href="#" style="margin-right: 1em;">Home</a>
+                <a href="#" style="margin-right: 1em;">about</a>
+                <a href="#" style="margin-right: 1em;">contact</a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
