add footer style.

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My custom Bulma website</title>
+	<script src="https://kit.fontawesome.com/2faf5253a7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -64,8 +65,8 @@
 						</div>
 						<div class="card-content">
 							<div class="media">
-								<div class="media-content">
-									<div class="is-flex" style="justify-content: center; margin-top: 2.5em; margin-bottom: 1em;">
+								<div class="media-content" style="margin: 1.5em 0 1.5em;">
+									<div class="is-flex" style="justify-content: center; margin-bottom: 1em;">
 										<div style="border-bottom: 3px solid #858585; width: 2.5em;"></div>
 									</div>
 									<p class="title is-size-5 has-text-weight-light has-text-centered">Lorem ipsum
@@ -84,8 +85,8 @@
 						</div>
 						<div class="card-content">
 							<div class="media">
-								<div class="media-content">
-									<div class="is-flex" style="justify-content: center; margin-top: 2.5em; margin-bottom: 1em;">
+								<div class="media-content" style="margin: 1.5em 0 1.5em;">
+									<div class="is-flex" style="justify-content: center; margin-bottom: 1em;">
 										<div style="border-bottom: 3px solid #858585; width: 2.5em;"></div>
 									</div>
 									<p class="title is-size-5 has-text-weight-light has-text-centered">Lorem ipsum
@@ -104,8 +105,8 @@
 						</div>
 						<div class="card-content">
 							<div class="media">
-								<div class="media-content">
-									<div class="is-flex" style="justify-content: center; margin-top: 2.5em; margin-bottom: 1em;">
+								<div class="media-content" style="margin: 1.5em 0 1.5em;">
+									<div class="is-flex" style="justify-content: center; margin-bottom: 1em;">
 										<div style="border-bottom: 3px solid #858585; width: 2.5em;"></div>
 									</div>
 									<p class="title is-size-5 has-text-weight-light has-text-centered">Lorem ipsum
@@ -154,18 +155,20 @@
           </div>
         </div>
     </section>
-    <footer class="footer">
-        <div class="content">
-            <div class="is-pulled-left">
-
+    <footer class="footer" style="padding: 2rem 1.5rem 2rem;">
+        <div class="content is-flex" style="justify-content: space-between;">
+            <div class="footer-content-color">
+				<a href="#" style="font-size: 1.5em;"><i class="fab fa-facebook"></i></a>
+				<a href="#" style="font-size: 1.5em;"><i class="fab fa-instagram"></i></a>
+				<a href="#" style="font-size: 1.5em;"><i class="fab fa-twitter"></i></a>
             </div>
-            <div class="is-pulled-right">
-                <a href="#" style="margin-right: 1em;">Home</a>
-                <a href="#" style="margin-right: 1em;">about</a>
-                <a href="#" style="margin-right: 1em;">contact</a>
+            <div class="footer-content-color">
+                <a href="#">Home</a>
+                <a href="#">about</a>
+                <a href="#">contact</a>
             </div>
         </div>
-    </footer>
+	</footer>
 </body>
 
 </html>
