update the design.

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -11,7 +11,7 @@
 
 <body>
 	<section class="hero is-primary is-fullheight"
-		style="background: url('https://images.unsplash.com/photo-1477554193778-9562c28588c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80') no-repeat right top;">
+		style="background: url('https://images.unsplash.com/photo-1531875456634-3f5418280d20?ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80') no-repeat left bottom;">
 		<!-- Hero head: will stick at the top -->
 		<div class="hero-head">
 			<!-- Main container -->
@@ -42,108 +42,89 @@
 				</h1>
 				<h2 class="subtitle is-3">
 					Hero subtitle
-					<div class="is-flex" style="justify-content: center; margin-top: .5em;">
-						<div style="border-bottom: 4px solid #858585; width: 1em;"></div>
-					</div>
 				</h2>
 			</div>
 		</div>
 	</section>
-	<section class="section" style="padding-top: 8em; padding-bottom: 15em; background-color: #e6e6e6;">
-		<div class="container">
-            <h1 class="title has-text-centered">Section</h1>
-            <div class="is-flex" style="justify-content: center; margin-top: .5em; margin-bottom: 4em;">
-                <div style="border-bottom: 4px solid #858585; width: 4em;"></div>
-            </div>
-			<div class="columns">
-				<div class="column">
-					<div class="card">
-						<div class="card-image">
-							<figure class="image is-4by3">
-								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-							</figure>
-						</div>
-						<div class="card-content">
-							<div class="media">
-								<div class="media-content" style="margin: 1.5em 0 1.5em;">
-									<div class="is-flex" style="justify-content: center; margin-bottom: 1em;">
-										<div style="border-bottom: 3px solid #858585; width: 2.5em;"></div>
-									</div>
-									<p class="title is-size-5 has-text-weight-light has-text-centered">Lorem ipsum
-										dolor sit amet consectetur adipisicing elit.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="column">
-					<div class="card">
-						<div class="card-image">
-							<figure class="image is-4by3">
-								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-							</figure>
-						</div>
-						<div class="card-content">
-							<div class="media">
-								<div class="media-content" style="margin: 1.5em 0 1.5em;">
-									<div class="is-flex" style="justify-content: center; margin-bottom: 1em;">
-										<div style="border-bottom: 3px solid #858585; width: 2.5em;"></div>
-									</div>
-									<p class="title is-size-5 has-text-weight-light has-text-centered">Lorem ipsum
-										dolor sit amet consectetur adipisicing elit.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="column">
-					<div class="card">
-						<div class="card-image">
-							<figure class="image is-4by3">
-								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-							</figure>
-						</div>
-						<div class="card-content">
-							<div class="media">
-								<div class="media-content" style="margin: 1.5em 0 1.5em;">
-									<div class="is-flex" style="justify-content: center; margin-bottom: 1em;">
-										<div style="border-bottom: 3px solid #858585; width: 2.5em;"></div>
-									</div>
-									<p class="title is-size-5 has-text-weight-light has-text-centered">Lorem ipsum
-										dolor sit amet consectetur adipisicing elit.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-    </section>
-    <section>
+	<section class="about-us">
         <div class="container is-fullhd">
             <div class="columns is-gapless">
-                <div class="column">
-                    <figure class="image">
-                        <img src="https://images.unsplash.com/photo-1560747571-bcf9a177ac53?ixlib=rb-1.2.1&auto=format&fit=crop&w=625&q=80">
-                    </figure>
-                </div>
                 <div class="column container is-fullhd">
                     <div class="has-text-centered">
                         <div style="margin: 5em 3em;">
-                            <h1 class="title">About</h1>
-                            <div class="is-flex" style="justify-content: center; margin-top: .5em; margin-bottom: 2em;">
-                                <div style="border-bottom: 4px solid #858585; width: 4em;"></div>
-                            </div>
-                            <p class="subtitle is-6 has-text-left" style="line-height: 1.8; letter-spacing: 1px;">
+                            <h1 class="title is-capitalized">Who we are</h1>
+                            <p class="subtitle is-6" style="line-height: 1.8; letter-spacing: 1px;">
                                 A simple container to divide your page into sections, like the one you're currently reading
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi dolores rerum eum doloremque a ipsa perferendis voluptatibus veniam et, eos similique cum esse accusantium sit laborum rem voluptas odit in.
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptas, dignissimos sint veritatis iusto quam non est dolores dolor quo harum. Voluptate sapiente atque adipisci at veniam doloremque iure! Blanditiis!
-                            </p>
+							</p>
+							<a href="#" class="has-text-centered is-uppercase has-text-weight-bold read-more">Read our story <i class="fas fa-chevron-right"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
+	<section class="section articles-section">
+		<div class="container">
+            <h1 class="title has-text-centered is-capitalized">articles</h1>
+			<div class="columns">
+				<div class="column">
+					<div class="card green-hover">
+						<a href="#" class="card-image">
+							<figure class="image is-4by3">
+								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+							</figure>
+						</a>
+						<div class="card-content">
+							<div class="media">
+								<div class="media-content has-text-centered" style="margin: 1.5em 0 1.5em;">
+									<a href="#" class="is-size-5 has-text-weight-light">Lorem ipsum
+										dolor sit amet consectetur adipisicing elit.</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="column">
+					<div class="card green-hover">
+						<a href="#" class="card-image">
+							<figure class="image is-4by3">
+								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+							</figure>
+						</a>
+						<div class="card-content">
+							<div class="media">
+								<div class="media-content has-text-centered" style="margin: 1.5em 0 1.5em;">
+									<a href="#" class="is-size-5 has-text-weight-light">Lorem ipsum
+										dolor sit amet consectetur adipisicing elit.</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="column">
+					<div class="card green-hover">
+						<a href="#" class="card-image">
+							<figure class="image is-4by3">
+								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+							</figure>
+						</a>
+						<div class="card-content">
+							<div class="media">
+								<div class="media-content has-text-centered" style="margin: 1.5em 0 1.5em;">
+									<a href="#" class="is-size-5 has-text-weight-light">Lore ipsum dolor sit amet consectetur adipisicing elit.
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="center" style="margin-top: 2.5em;">
+				<a href="#" class="is-uppercase has-text-weight-bold read-more">Read more <i class="fas fa-chevron-right"></i></a>
+			</div>
+		</div>
     </section>
     <section class="hero is-medium has-background-grey-lighter is-bold">
         <div class="hero-body">
