update home page design.

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -29,8 +29,7 @@
 				<div class="level-right">
 					<p class="level-item"><a class="has-text-dark has-text-weight-medium" href="#">About</a></p>
 					<p class="level-item"><a class="has-text-dark has-text-weight-medium" href="#">Articles</a></p>
-					<p class="level-item"><button class="button is-primary is-outlined is-radiusless"
-							style="border-width: 2px;">Outlined</button></p>
+					<p class="level-item"><button class="button is-primary is-outlined" style="border-width: 2px;">Outlined</button></p>
 				</div>
 			</nav>
 		</div>
@@ -40,40 +39,44 @@
 				<h1 class="title is-1 is-uppercase" style="font-size: 6em;">
 					lombok
 				</h1>
-				<h2 class="subtitle is-3">
+				<h2 class="subtitle is-4">
 					Hero subtitle
 				</h2>
 			</div>
 		</div>
 	</section>
-	<section class="about-us">
+	<section class="about-us has-background-white is-fullheight">
         <div class="container is-fullhd">
-            <div class="columns is-gapless">
-                <div class="column container is-fullhd">
-                    <div class="has-text-centered">
-                        <div style="margin: 5em 3em;">
-                            <h1 class="title is-capitalized">Who we are</h1>
-                            <p class="subtitle is-6" style="line-height: 1.8; letter-spacing: 1px;">
-                                A simple container to divide your page into sections, like the one you're currently reading
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi dolores rerum eum doloremque a ipsa perferendis voluptatibus veniam et, eos similique cum esse accusantium sit laborum rem voluptas odit in.
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptas, dignissimos sint veritatis iusto quam non est dolores dolor quo harum. Voluptate sapiente atque adipisci at veniam doloremque iure! Blanditiis!
-							</p>
-							<a href="#" class="has-text-centered is-uppercase has-text-weight-bold read-more">Read our story <i class="fas fa-chevron-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+			<div class="has-text-left">
+				<div class="columns" style="margin: 5em 3em;">
+					<div class="column">
+						<figure class="image is-1by1 is-relative">
+							<img style="object-fit: cover; box-shadow: -3px 6px 16px 4px #2929292b; z-index: 2;" src="https://images.unsplash.com/photo-1521310383786-3716592be507?ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80">
+							<div class="sb"></div>
+						</figure>
+					</div>
+					<div class="column center" style="flex-direction: column; margin-left: 1.5em;">
+						<h1 class="title is-capitalized">Who we are</h1>
+						<p class="subtitle is-6" style="line-height: 1.8; letter-spacing: 1px;">
+							A simple container to divide your page into sections, like the one you're currently reading
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi dolores rerum eum doloremque a ipsa perferendis voluptatibus veniam et, eos similique cum esse accusantium sit laborum rem voluptas odit in.
+							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptas, dignissimos sint veritatis iusto quam non est dolores dolor quo harum. Voluptate sapiente atque adipisci at veniam doloremque iure! Blanditiis!
+						</p>
+						<a href="#" class="has-text-centered is-uppercase has-text-weight-bold read-more">Read our story <i class="fas fa-chevron-right"></i></a>
+					</div>
+				</div>
+			</div>
         </div>
     </section>
 	<section class="section articles-section">
 		<div class="container">
-            <h1 class="title has-text-centered is-capitalized">articles</h1>
-			<div class="columns">
-				<div class="column">
+            <h1 class="title is-2 has-text-centered is-capitalized">articles</h1>
+			<div class="columns is-multiline">
+				<div class="column is-one-third">
 					<div class="card green-hover">
 						<a href="#" class="card-image">
 							<figure class="image is-4by3">
-								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+								<img style="object-fit: cover;" src="https://images.unsplash.com/photo-1531875456634-3f5418280d20?ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80" alt="Placeholder image">
 							</figure>
 						</a>
 						<div class="card-content">
@@ -86,11 +89,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="column">
+				<div class="column is-one-third">
 					<div class="card green-hover">
 						<a href="#" class="card-image">
 							<figure class="image is-4by3">
-								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+								<img style="object-fit: cover;" src="https://images.unsplash.com/photo-1561642752-266cde07ba25?ixlib=rb-1.2.1&auto=format&fit=crop&w=375&q=80" alt="Placeholder image">
 							</figure>
 						</a>
 						<div class="card-content">
@@ -103,11 +106,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="column">
+				<div class="column is-one-third">
 					<div class="card green-hover">
 						<a href="#" class="card-image">
 							<figure class="image is-4by3">
-								<img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+								<img style="object-fit: cover;" src="https://images.unsplash.com/photo-1517770467049-60344696d261?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="Placeholder image">
 							</figure>
 						</a>
 						<div class="card-content">
@@ -122,21 +125,21 @@
 				</div>
 			</div>
 			<div class="center" style="margin-top: 2.5em;">
-				<a href="#" class="is-uppercase has-text-weight-bold read-more">Read more <i class="fas fa-chevron-right"></i></a>
+				<a href="#" class="is-uppercase has-text-weight-bold read-more">See more <i class="fas fa-chevron-right"></i></a>
 			</div>
 		</div>
     </section>
-    <section class="hero is-medium has-background-grey-lighter is-bold">
+    <section class="hero is-medium has-background-white is-relative overlay" style="background: url('https://images.unsplash.com/photo-1507041957456-9c397ce39c97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80') no-repeat center; background-size: cover;">
         <div class="hero-body">
           <div class="container has-text-centered" style="display: flex; flex-direction: column;">
-            <h1 class="title has-text-weight-normal">Subscribe</h1>
-            <h2 class="subtitle is-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-            <input class="input is-radiusless has-background-grey-light" type="text" placeholder="Email" style="box-shadow: none; border: none; margin-bottom: 1em; width: 35em; align-self: center;">
-            <button class="button is-dark is-outlined is-radiusless" style="align-self: center; border-width: 2px;">Subscribe</button>
+            <h1 class="title has-text-weight-normal has-text-white">Subscribe</h1>
+            <h2 class="subtitle is-6 has-text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+            <input class="input sub-input" type="text" placeholder="Email">
+            <button class="button is-dark has-text-white" style="align-self: center; border-width: 2px;">Subscribe</button>
           </div>
         </div>
     </section>
-    <footer class="footer" style="padding: 2rem 1.5rem 2rem;">
+    <footer class="footer has-background-grey-lighter" style="padding: 2rem 1.5rem 2rem;">
         <div class="content is-flex" style="justify-content: space-between;">
             <div class="footer-content-color">
 				<a href="#" style="font-size: 1.5em;"><i class="fab fa-facebook"></i></a>
