separated webpack config into different files for production

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -62,7 +62,7 @@
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi dolores rerum eum doloremque a ipsa perferendis voluptatibus veniam et, eos similique cum esse accusantium sit laborum rem voluptas odit in.
 							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptas, dignissimos sint veritatis iusto quam non est dolores dolor quo harum. Voluptate sapiente atque adipisci at veniam doloremque iure! Blanditiis!
 						</p>
-						<a href="#" class="has-text-centered is-uppercase has-text-weight-bold read-more">Read our story <i class="fas fa-chevron-right"></i></a>
+						<a href="#" class="has-text-centered is-uppercase has-text-weight-bold read-more">Read our story <i class="fas fa-chevron-right" style="margin-left: .5em;"></i></a>
 					</div>
 				</div>
 			</div>
