change the design && add new page.

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -6,44 +6,44 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My custom Bulma website</title>
-	<script src="https://kit.fontawesome.com/2faf5253a7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 	<section class="hero is-primary is-fullheight"
-		style="background: url('https://images.unsplash.com/photo-1531875456634-3f5418280d20?ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80') no-repeat left bottom;">
+		style="background: url('https://images.unsplash.com/photo-1550147760-44c9966d6bc7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1575&q=80') no-repeat left bottom;">
 		<!-- Hero head: will stick at the top -->
 		<div class="hero-head">
 			<!-- Main container -->
-			<nav class="level container is-fluid" style="margin-top: 30px;">
+			<nav class="level top-navbar container is-fluid" style="margin-top: 30px;">
 				<!-- Left side -->
 				<div class="level-left">
 					<div class="level-item">
 						<p class="title is-2">
-							<strong class="has-text-dark is-uppercase">GL</strong>
+							<strong class="has-text-white has-text-weight-bold is-uppercase">GL</strong>
 						</p>
 					</div>
 				</div>
 
 				<!-- Right side -->
 				<div class="level-right">
-					<p class="level-item"><a class="has-text-dark has-text-weight-medium" href="#">About</a></p>
-					<p class="level-item"><a class="has-text-dark has-text-weight-medium" href="#">Articles</a></p>
-					<p class="level-item"><button class="button is-primary is-outlined" style="border-width: 2px;">Outlined</button></p>
+					<p class="level-item"><a class="has-text-weight-bold" href="#">About</a></p>
+					<p class="level-item"><a class="has-text-weight-bold" href="./post.html">Articles</a></p>
+					<p class="level-item"><button class="button is-primary has-text-weight-bold" style="border-width: 2px;">Outlined</button></p>
 				</div>
 			</nav>
 		</div>
 
 		<div class="hero-body">
 			<div class="container has-text-centered">
-				<h1 class="title is-1 is-uppercase" style="font-size: 6em;">
-					lombok
+				<h1 class="title is-1 is-capitalized" style="font-size: 6em;">
+					Greenleaf
 				</h1>
 				<h2 class="subtitle is-4">
 					Hero subtitle
 				</h2>
 			</div>
 		</div>
+		<div class="center is-size-2 arrow bounce"><i class="fas fa-angle-down"></i></div>
 	</section>
 	<section class="about-us has-background-white is-fullheight">
         <div class="container is-fullhd">
