--- a/src/homepage.html
+++ b/src/homepage.html
@@ -26,9 +26,9 @@
 
 				<!-- Right side -->
 				<div class="level-right">
-					<p class="level-item"><a class="has-text-weight-bold" href="#">About</a></p>
-					<p class="level-item"><a class="has-text-weight-bold" href="./post.html">Articles</a></p>
-					<p class="level-item"><button class="button is-primary has-text-weight-bold" style="border-width: 2px;">Outlined</button></p>
+					<p class="level-item"><a class="has-text-weight-bold" href="#about">About</a></p>
+					<p class="level-item"><a class="has-text-weight-bold" href="#articles">Articles</a></p>
+					<p class="level-item"><a href="#sub" class="button is-primary has-text-weight-bold" style="border-width: 2px;">subscribes</a></p>
 				</div>
 			</nav>
 		</div>
@@ -45,7 +45,7 @@
 		</div>
 		<div class="center is-size-2 arrow bounce"><i class="fas fa-angle-down"></i></div>
 	</section>
-	<section class="about-us has-background-white is-fullheight">
+	<section id="about" class="about-us has-background-white is-fullheight">
         <div class="container is-fullhd">
 			<div class="has-text-left">
 				<div class="columns" style="margin: 5em 3em;">
@@ -68,13 +68,13 @@
 			</div>
         </div>
     </section>
-	<section class="section articles-section">
+	<section id="articles" class="section articles-section">
 		<div class="container">
             <h1 class="title is-2 has-text-centered is-capitalized">articles</h1>
 			<div class="columns is-multiline">
 				<div class="column is-one-third">
 					<div class="card green-hover">
-						<a href="#" class="card-image">
+						<a href="./post.html" class="card-image">
 							<figure class="image is-4by3">
 								<img style="object-fit: cover;" src="https://images.unsplash.com/photo-1531875456634-3f5418280d20?ixlib=rb-1.2.1&auto=format&fit=crop&w=1534&q=80" alt="Placeholder image">
 							</figure>
@@ -82,7 +82,7 @@
 						<div class="card-content">
 							<div class="media">
 								<div class="media-content has-text-centered" style="margin: 1.5em 0 1.5em;">
-									<a href="#" class="is-size-5 has-text-weight-light">Lorem ipsum
+									<a href="./post.html" class="is-size-5 has-text-weight-light">Lorem ipsum
 										dolor sit amet consectetur adipisicing elit.</a>
 								</div>
 							</div>
@@ -91,7 +91,7 @@
 				</div>
 				<div class="column is-one-third">
 					<div class="card green-hover">
-						<a href="#" class="card-image">
+						<a href="./post.html" class="card-image">
 							<figure class="image is-4by3">
 								<img style="object-fit: cover;" src="https://images.unsplash.com/photo-1561642752-266cde07ba25?ixlib=rb-1.2.1&auto=format&fit=crop&w=375&q=80" alt="Placeholder image">
 							</figure>
@@ -99,7 +99,7 @@
 						<div class="card-content">
 							<div class="media">
 								<div class="media-content has-text-centered" style="margin: 1.5em 0 1.5em;">
-									<a href="#" class="is-size-5 has-text-weight-light">Lorem ipsum
+									<a href="./post.html" class="is-size-5 has-text-weight-light">Lorem ipsum
 										dolor sit amet consectetur adipisicing elit.</a>
 								</div>
 							</div>
@@ -108,7 +108,7 @@
 				</div>
 				<div class="column is-one-third">
 					<div class="card green-hover">
-						<a href="#" class="card-image">
+						<a href="./post.html" class="card-image">
 							<figure class="image is-4by3">
 								<img style="object-fit: cover;" src="https://images.unsplash.com/photo-1517770467049-60344696d261?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="Placeholder image">
 							</figure>
@@ -116,7 +116,7 @@
 						<div class="card-content">
 							<div class="media">
 								<div class="media-content has-text-centered" style="margin: 1.5em 0 1.5em;">
-									<a href="#" class="is-size-5 has-text-weight-light">Lore ipsum dolor sit amet consectetur adipisicing elit.
+									<a href="./post.html" class="is-size-5 has-text-weight-light">Lore ipsum dolor sit amet consectetur adipisicing elit.
 									</a>
 								</div>
 							</div>
@@ -129,7 +129,7 @@
 			</div>
 		</div>
     </section>
-    <section class="hero is-medium has-background-white is-relative overlay" style="background: url('https://images.unsplash.com/photo-1507041957456-9c397ce39c97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80') no-repeat center; background-size: cover;">
+    <section id="sub" class="hero is-medium has-background-white is-relative overlay" style="background: url('https://images.unsplash.com/photo-1507041957456-9c397ce39c97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80') no-repeat center; background-size: cover;">
         <div class="hero-body">
           <div class="container has-text-centered" style="display: flex; flex-direction: column;">
             <h1 class="title has-text-weight-normal has-text-white">Subscribe</h1>
